# django-check

./: Cargo.toml  README.md
.github/workflows/: pypi-release.yml  release.yml  test.yml
crates/django-check/: Cargo.toml  LICENSE  pyproject.toml
crates/django-check/src/: cli.rs  main.rs
crates/django-check_semantic/: Cargo.toml
crates/django-check_semantic/src/: diagnostic.rs  error.rs  lib.rs  parser.rs
crates/django-check_semantic/src/ir/: binding.rs  mod.rs  model.rs
crates/django-check_semantic/src/passes/: functions.rs  mod.rs  model_graph.rs  n_plus_one.rs
crates/django-check_server/: Cargo.toml
crates/django-check_server/src/: lib.rs
crates/pydj/: Cargo.toml
crates/pydj-semantic/: Cargo.toml
crates/pydj-semantic/src/: diagnostic.rs  lib.rs  parser.rs
crates/pydj-semantic/src/ir/: model.rs
crates/pydj-semantic/src/passes/: functions.rs  mod.rs  n_plus_one.rs
crates/pydj-server/: Cargo.toml
crates/pydj-server/src/: lib.rs
crates/pydj/src/: cli.rs  main.rs
src/: diagnostic.rs  main.rs  parser.rs
src/ir/: binding.rs  model.rs
src/passes/: mod.rs  model_graph.rs  n_plus_one.rs
