[workspace.package]
edition = "2024"
authors = ["Richard Peña <richard.penab@gmail.com>"]
rust-version = "1.90"
license = "MIT"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
pydj = { path = "crates/pydj" }
pydj_semantic = { path = "crates/pydj-semantic" }
pydj_server = { path = "crates/pydj-server" }

