[workspace.package]
edition = "2024"
authors = ["Richard Peña <richard.penab@gmail.com>"]
rust-version = "1.90"
license = "MIT"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
pydj = { path = "crates/pydj" }
pydj_semantic = { path = "crates/pydj-semantic" }
pydj_server = { path = "crates/pydj-server" }
tokio = { version = "1.48.0", features = ["macros", "io-std", "rt-multi-thread"] }
tracing = { version = "0.1.44" }
tracing_subscriber = { version = "0.3.22", features = ["env-filter"] }

