[workspace.package]
edition = "2024"
authors = ["Richard Peña <richard.penab@gmail.com>"]
rust-version = "1.90"
license = "MIT"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
django-check = { path = "crates/django-check" }
django-check_semantic = { path = "crates/django-check_semantic" }
django-check_server = { path = "crates/django-check_server" }
tokio = { version = "1.48.0", features = ["macros", "io-std", "rt-multi-thread"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

