[package]
name = "django-check"
version = "0.1.3"
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
readme = "README.md"
repository = "https://github.com/richardhapb/django-check"
description = "Static N+1 query detector for Django ORM"

[[bin]]
name = "djch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }

django-check_semantic = { workspace = true }
django-check_server = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
