[package]
name = "django-check_server"
version = "0.1.0"
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
django-check_semantic = { workspace = true }

tower-lsp = "0.20.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
