[package]
name = "pydj_server"
version = "0.1.0"
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
pydj_semantic = { workspace = true }

tower-lsp = "0.20.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
